--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -1,108 +1,154 @@
-/*
-	Parallelism 1.1 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 /*********************************************************************************/
 /* Basic                                                                         */
 /*********************************************************************************/
 
-	body
-	{
+	body {
+		min-width: 320px;
+	}
+
+	body,input,textarea,select {
 		font-size: 12pt;
-		line-height: 1.75em;
+		line-height: 1.5em;
 	}
 
-	ul.contact
-	{
-	}
-	
-		ul.contact li
-		{
-			margin: 0 0.25em 0 0.25em;
-		}
-
-	.item
-	{
-	}
-
-	.thumb
-	{
+	h2 {
+		font-size: 1.5em;
+		letter-spacing: -1px;
 	}
 	
-		.thumb h2
-		{
-			text-align: center;
+	/* Box */
+
+		.box {
+			padding: 1em;
 		}
 
-/*********************************************************************************/
-/* Wrapper                                                                       */
-/*********************************************************************************/
+			.box.style2 {
+				padding: 1.5em 1.25em 1.5em 1.25em;
+				background-color: rgba(255,255,255,0.9);
+			}
 
-	#wrapper
-	{
-	}
-	
-		#wrapper.overlayed
-		{
-			-webkit-filter: blur(1px);
+	/* Main */
+
+		.main {
 		}
+
+			.main.style1 {
+				padding: 4em 15px 4em 15px;
+			}
+
+				.main.style1 h2 {
+					font-size: 3em;
+					letter-spacing: -3px;
+				}
+
+			.main.style2 {
+				padding: 6em 15px 6em 15px;
+			}
+			
+				.main.style2 .button.anchored {
+					display: none;
+				}
+
+				.main.style2 .content {
+					width: 100%;
+					left: 0% !important;
+					text-align: center;
+				}
+				
+				.main.style2 .tmp {
+					width: 100%;
+					height: 10em;
+					background-size: cover;
+				}
+
+			.main.style3 {
+				text-align: center;
+				padding: 3em 10px 3em 10px;
+			}
 
 /*********************************************************************************/
 /* Header                                                                        */
 /*********************************************************************************/
 
-	#header
-	{
-		padding: 3em 0 3em 0;
-		text-align: center;
+	#header {
+		height: 2.5em;
+		line-height: 2.5em;
 	}
 
-		#header h1
-		{
-			font-size: 2.25em;
-			margin: 0 0 0.5em 0;
+	body {
+		padding-top: 2.5em;
+	}
+
+	#logo {
+		text-align: center;
+		position: relative;
+		left: 0;
+		top: 0;
+		height: 2.5em;
+		line-height: 2.5em;
+	}
+	
+		#logo a {
+			font-size: 1em;
 		}
-		
-		#header p
-		{
-			font-size: 1.25em;
-			line-height: 1.25em;
-		}
+	
+	#nav {
+		display: none;
+	}
 
 /*********************************************************************************/
 /* Footer                                                                        */
 /*********************************************************************************/
+	
+	#footer {
+	}
+		
+		#footer .menu {
+		}
+		
+			#footer .menu li {
+				border-left: 0;
+				padding: 1em 0 0 0;
+				margin: 0;
+				display: block;
+			}
+			
+				#footer .menu li:first-child {
+					padding-top: 0;
+				}
+				
+				#footer .menu li a {
+					line-height: 1.5em;
+				}
+				
+/*********************************************************************************/
+/* Poptrox                                                                       */
+/*********************************************************************************/
 
-	#footer
-	{
-		padding: 2em;
-		text-align: center;
+	.poptrox-popup {
 	}
 	
-		#footer br
-		{
-			display: none;
+		.poptrox-popup .nav-next,
+		.poptrox-popup .nav-previous {
 		}
-		
-		#footer .left
-		{
-			margin: 0 0 2em 0;
-		}
-		
-/*********************************************************************************/
-/* Popup                                                                         */
-/*********************************************************************************/
 
-	.poptrox-popup
-	{
-		background: #0a0f1c;
-		box-shadow: 0px 0px 30px 10px rgba(8,11,19,0.85);
-		border: solid 5px #fff;
-		-moz-box-sizing: content-box;		
-		-webkit-box-sizing: content-box;		
-		-o-box-sizing: content-box;		
-		-ms-box-sizing: content-box;		
-		box-sizing: content-box;		
-	}
+			.poptrox-popup .nav-next:before,
+			.poptrox-popup .nav-previous:before {
+				width: 48px;
+				height: 32px;
+				background-size: contain;
+				margin: -16px 0 0 0;
+			}
+			
+		.poptrox-popup .closer {
+		}
+		
+			.poptrox-popup .closer:before {
+				right: 12px;
+				top: 12px;
+				width: 20px;
+				height: 20px;
+				box-shadow: inset 0 0 0 1px #fff;
+				background-size: contain;
+				opacity: 0.65;
+			}
