--- a/css/style.css
+++ b/css/style.css
@@ -1032,7 +1032,7 @@
 		background: #fff;
 		background: rgba(255,255,255,0.95);
 		height: 3em;
-		line-height: 3em;
+		line-height: 3em; 
 		box-shadow: 0 0 0.15em 0 rgba(0,0,0,0.1);
 	}
 	
@@ -1041,12 +1041,12 @@
 	}
 
 	#logo {
-		position: absolute;
-		left: 1em;
-		top: 0;
-		height: 3em;
-		line-height: 3em;
-		letter-spacing: -1px;
+        background:url(../images/cilianbc-Logo.png);
+        background-repeat: no-repeat;
+        text-indent: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+       
 	}
 	
 		#logo a {
