--- a/css/main.css
+++ b/css/main.css
@@ -395,3 +395,6 @@ nav a:hover {
         page-break-after: avoid;
     }
 }
+/* ==========================================================================
+   slider
+   ========================================================================== */
